<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="ifRoom"
        android:title="@string/share" />
    <item
        android:id="@+id/action_details"
        android:title="@string/action_details" />
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_feedback"
        android:title="@string/action_feedback" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about" />
</menu>
